# DCTT

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DCTT_Research_Specification.md  Discrete_to_Continuous_Transition_Testing__A_Comprehensive_Framework_for_LLM_Embedding_Geometry  Feedback.md  LICENSE  Makefile  README.md  SESSION_HANDOFF.md  pyproject.toml
.claude/: settings.json
.claude/skills/verify-docs/: SKILL.md
configs/: config.yaml
configs/compute/: local_m3.yaml  modal_gpu.yaml
configs/confounds/: mistral_7b_repo_counts.meta.json  qwen2_5_coder_7b_repo_counts.meta.json  qwen2_5_coder_7b_repo_counts_aligned.meta.json  tinyllama_1_1b_repo_counts.meta.json
configs/experiment/: ablation_suite.yaml  causal_repair.yaml  census.yaml  cross_family_rescue.yaml  predictive_rescue.yaml
configs/model/: llama3_8b.yaml  mistral_7b.yaml  qwen2_5_7b.yaml  qwen2_5_coder_7b.yaml  tinyllama_1_1b.yaml
configs/paper/: publication_assets_lock.yaml  submission_package_lock.yaml
configs/pipeline/: diagnostic_only.yaml  full.yaml
docs/: QUALITY.md  index.md
docs/design/: architecture.md  claim-boundaries.md  core-insights.md  hard_pivot_publication_strategy.md  index.md  predictive_negative_reframing.md  submission_reproducibility_appendix.md
docs/plans/: index.md
docs/plans/completed/: neurips-action-plan.md
docs/references/: api-patterns.md  index.md  key-metrics.md
experiments/: __init__.py  build_token_frequency_counts.py  modal_predictive_sweep.py  run_ablation_suite.py  run_causal_cluster_repair.py  run_causal_repair.py  run_census.py  run_cluster_repair.py  run_predictive_validity.py  run_predictive_validity_sweep.py  run_repair_validation.py  run_stress_tests.py
figures_src/: pipeline_diagram_spec.yaml
scripts/: __init__.py  build_hard_pivot_report.py  evaluate_predictive_gate.py  finalize_modal_predictive_sweep.py  freeze_submission_package.py  generate_paper_figures.py  launch_cross_family_rescue.py  lock_predictive_protocol.py  make_plots.py  verify_pipeline.py  verify_submission_package.py
src/dctt/: __init__.py  cli.py  version.py
src/dctt/benchmarks/: __init__.py  gsm8k.py  humaneval.py
src/dctt/core/: __init__.py  exceptions.py  registry.py  types.py
src/dctt/embeddings/: __init__.py  cache.py  extract.py  normalize.py
src/dctt/evaluation/: __init__.py  causal.py  matched_controls.py  predictive.py  statistics.py
src/dctt/metrics/: __init__.py  consistency.py  severity.py  stage1.py  stage2.py  stage3.py  thresholding.py
src/dctt/modal_app/: __init__.py
src/dctt/neighbors/: __init__.py  index.py  query.py  usearch_index.py
src/dctt/repair/: __init__.py  candidate.py  cluster.py  cluster_optimizer.py  losses.py  optimizer.py  projection.py  validate.py
src/dctt/stress_tests/: __init__.py  base.py  code_syntax.py  forced_minimal_pair.py  math_format.py  runner.py
src/dctt/tracking/: __init__.py  artifacts.py  reproducibility.py  wandb_utils.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_experiment_sanity.py
tests/property/: __init__.py  test_metric_properties.py
tests/unit/: __init__.py  test_forced_minimal_pair.py  test_predictive_confound_io.py  test_runtime_device_resolution.py  test_stage2_metrics.py  test_usearch_index.py
