[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dctt"
version = "0.1.0"
description = "Discrete-to-Continuous Transition Testing for LLM Embedding Geometry"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "DCTT Research Team" }
]
keywords = [
    "machine-learning",
    "embeddings",
    "llm",
    "geometry",
    "diagnostics",
    "nlp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML - Apple Silicon optimized
    "torch>=2.3.0",
    "transformers>=4.45.0,<5.0.0",
    "safetensors>=0.4.0",
    "accelerate>=0.27.0",

    # Vector search - M3 Max optimized
    "usearch>=2.13.0",
    "faiss-cpu>=1.8.0",

    # Numerical computing
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",

    # TDA (Stage 3)
    "ripser>=0.6.4",
    "persim>=0.3.0",

    # Configuration & tracking
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.18.0",

    # Code analysis for stress tests
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",

    # Utilities
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pydantic>=2.5.0",
    "xxhash>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "hypothesis>=6.100.0",
    "mypy>=1.8.0",
    "ruff>=0.5.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
]

mlx = [
    "mlx>=0.20.0",
    "mlx-lm>=0.20.0",
]

modal = [
    "modal>=0.67.0",
]

eval = [
    "lm-eval>=0.4.0",
    "human-eval @ git+https://github.com/openai/human-eval.git",
]

all = [
    "dctt[dev,mlx,modal,eval]",
]

[project.scripts]
dctt = "dctt.cli:app"

[project.urls]
Homepage = "https://github.com/dctt-research/dctt"
Documentation = "https://github.com/dctt-research/dctt#readme"
Repository = "https://github.com/dctt-research/dctt"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dctt = ["py.typed"]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
    "SIM108", # use ternary operator instead of if-else
]

[tool.ruff.lint.isort]
known-first-party = ["dctt"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG001", "S101"]
"**/__init__.py" = ["F401"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "usearch.*",
    "faiss.*",
    "scipy.*",
    "sklearn.*",
    "ripser.*",
    "persim.*",
    "wandb.*",
    "hydra.*",
    "omegaconf.*",
    "tree_sitter.*",
    "mlx.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
    "--cov=src/dctt",
    "--cov-report=term-missing",
    "--cov-report=html:outputs/coverage",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU/MPS",
    "integration: marks integration tests",
    "property: marks property-based tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/dctt"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
